Kubernetes/ciservice.yml
apiVersion: v1
kind: Service
metadata:
  name: my-clusterip-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8000
