Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
      - name: index-file
        configMap:
         name: index-html-configmap
      containers:
      - name: kube-web
        image: prashanchandika/axinom_web:1
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: index-file
          mountPath: /root/
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30008
