Kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: ${URL}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-clusterip-service
            port:
              number: 8001
  tls: 
    - hosts: 
        - ${URL}
